# seeder_server

./: readme.md  send_to_peer.txt  tcp_socket.diff
doc/: architecture.md  client_arch.uml  server_arch.uml
install/: client  server
src/: .cproject  .project  CMakeLists.txt
src/client/: client.cpp  client.h
src/server/: server.cpp  server.h
src/util/: util.c  util.h
